feat: update devpack-for-spring-cli to 0.12.5 (#163)
* chore: bump snap version.

* docs: update snap description.

* chore: update plugin configuration to the new format.

* feat: use Java 25 aot

* chore: use 0.12.4 devpack-for-spring-cli

* chore: update plugin configuration

* docs: update rocks commands limitation.

* docs: reference build plugin documentation

* feat: use aot cache, build from main

* fix: fix spread smoke test assertion

* chore: install openjdk-17

* feat: do not override plugin config location

* test: add plugin test skeletons

* feat: repack devpack-for-spring boot jar to be aot compatible

* chore: update default plugin configuration

* test: add spread tests for running plugins

* chore: remove plugin configuration

The configuration file is now maintained in devpack-for-spring-cli.

* Update devpack-for-spring/cli.sh

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Vladimir Petko <vladimir.petko@canonical.com>

* Update devpack-for-spring/README.md

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Vladimir Petko <vladimir.petko@canonical.com>

* test: use grep -q in assertion

* fix: strip trailing ':' in classpath

* Update devpack-for-spring/README.md

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Vladimir Petko <vladimir.petko@canonical.com>

* Update devpack-for-spring/snap/snapcraft.yaml

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Vladimir Petko <vladimir.petko@canonical.com>

* test: pin plugin versions.

* fix: store classpath in a text file

* fix: do not use envsubst

---------

Signed-off-by: Vladimir Petko <vladimir.petko@canonical.com>
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>