@@ -1,4 +1,22 @@
 #!/bin/bash
-export SPRING_CLI_BUILD_COMMANDS_PLUGIN_CONFIGURATION=${SPRING_CLI_BUILD_COMMANDS_PLUGIN_CONFIGURATION:-/snap/devpack-for-spring/current/plugin-configuration.yaml}
+set -e
 export SPRING_CLI_SETUP_COMMANDS_CONFIGURATION=${SPRING_CLI_SETUP_COMMANDS_CONFIGURATION:-/snap/devpack-for-spring/current/setup-configuration.yaml}
-$SNAP/cli/devpack-for-spring-cli $*
+
+NATIVE_ACCESS="--sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED"
+AOT_PATH="$SNAP/cli/devpack-for-spring-cli.aot"
+AOT_FLAG="-XX:AOTCache=$AOT_PATH -XX:AOTMode=on -Xlog:aot=error"
+eval "CLASSPATH=\"$(cat "$SNAP/cli/classpath.txt")\""
+
+if [ -n "$DEVPACK_FOR_SPRING_DEBUG_FLAG" ]; then
+    AOT_FLAG=""
+    set -ex
+fi
+
+"$SNAP/usr/bin/java" \
+    $DEVPACK_FOR_SPRING_DEBUG_FLAG \
+    $AOT_FLAG \
+    -Dspring.aot.enabled=true \
+    -Dio.netty.noUnsafe=true \
+    $NATIVE_ACCESS \
+    -cp "$SNAP/cli/devpack-for-spring-cli.jar:$CLASSPATH" \
+    org.springframework.cli.DevpackForSpringCliApplication "$@"
